# docs/swagger.yaml
@@ -789,6 +789,29 @@ paths:
       summary: Get patient statistics
       tags:
       - patients
+  /api/v1/pps/aware-categorization:
+    get:
+      consumes:
+      - application/json
+      description: Calculate the distribution of antibiotics based on WHO AWaRe classification
+        (Access, Watch, Reserve, Unclassified)
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Get WHO AWaRe antibiotic categorization
+      tags:
+      - pps-calculations
   /api/v1/pps/basic-metrics:
     get:
       consumes:
